--- a/index.html
+++ b/index.html
@@ -24,5 +24,5 @@
 
 		<script src="index.js"></script>
 	</body>
-	<footer>Made with ❤️ in London.</footer>
+	<footer>Made with ❤️ in Pakistan.</footer>
 </html>
